--- a/liveWallpaperWaterfall/src/main/AndroidManifest.xml
+++ b/liveWallpaperWaterfall/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.km.livewallpaperwaterfall"
+    package="com.km.waterfallLWP"
     android:versionCode="1"
-    android:versionName="1.0.0" >
+    android:versionName="1.0.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -18,15 +18,21 @@
         android:glEsVersion="0x00020000"
         android:required="true" >
     </uses-feature>
-​
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+​     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.km.livewallpaperwaterfall.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.km.waterfallLWP.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,12 +41,13 @@
         </activity>
 
         <activity
-            android:name="com.km.livewallpaperwaterfall.SettingsActivity"
+            android:name="com.km.waterfallLWP.SettingsActivity"
             android:label="@string/app_name"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait">
         </activity>
         <service 
-            android:name="com.km.livewallpaperwaterfall.service.GLWallpaperService"
+            android:name="com.km.waterfallLWP.service.GLWallpaperService"
             android:enabled="true"
             android:label="@string/title_wallpaper"
             android:permission="android.permission.BIND_WALLPAPER" >
@@ -54,6 +61,26 @@
                 android:resource="@xml/mywallpaper" >
             </meta-data>
         </service>
+        <receiver android:name="com.km.waterfallLWP.reciever.ReceiverBoot" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.km.waterfallLWP.reciever.NotificationReceiver"
+            android:enabled="true" >
+        </receiver>
+
+        <receiver android:name="com.km.waterfallLWP.reciever.NotificationDeleteReceiver" >
+        </receiver>
+
+        <activity
+            android:name="com.km.waterfallLWP.HelpActivity"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:screenOrientation="portrait">
+        </activity>
+
     </application>
 
 </manifest>
